--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -4,7 +4,7 @@
         <title>{% block title %}Absolute Design{% endblock title %}</title>
         <link rel="stylesheet" type="text/css" href="{% static 'website/style.css' %}"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="{% static 'website/parallax.min.js' %}"></script>
+
     </head>
     <body>
         <div class="page">
@@ -13,9 +13,9 @@
                 <img class="logo logo-float-left" src="{% static 'website/logo.png' %}">
                 <div class="nav-container">
                     <ul class="nav">
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="#">HOME</a></li>
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="#">ABOUT</a></li>
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="#">CONTACT US</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">CONTACT US</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
                     </ul>
                 </div>
             </div>
@@ -23,7 +23,6 @@
             <div class="content">
                 {% block content %}
                 {% endblock %}
-
             </div>
             <!--Footer-->
             <div class="footer">
