--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -2,16 +2,48 @@
 {% load staticfiles %}
 {% block title %}Absolute Design{% endblock title %}
 {% block content %}
-    <div class="jumbo">
-        <img class="jumbo-image" src="{% static 'website/mountains.jpg' %}">
-        <!--<div class="jumbo-image-parallax"></div>-->
-        <h1 class="jumbo-text jumbo-text-parralax">Design is Hard.</h1>
-        <h2 class="jumbo-text jumbo-text-secondary jumbo-text-parralax">Let us do it for you.</h2>
+    <div class="jumbo-container">
+        <img class="jumbo-image" src="{% static 'website/background.jpg' %}">
+        <h1 class="jumbo-text">Design is Hard.</h1>
+        <h2 class="jumbo-text jumbo-text-secondary">Let us do it for you.</h2>
     </div>
-    <div class="about">
-        <h1>Absolute Design</h1>
-        <br>
-        <h2>We build websites.</h2>
+    <!-- Ideas for stupid headers lol: Innovative Design, Powerful User Experience, Personal Client Collaboration -->
+
+    <div class="content-container" style="height:600px;" data-parallax="scroll" data-image-src="{% static 'website/mountains.jpg' %}">
+        <div class="content-block content-block-medium">
+            <h1>Absolute Design</h1>
+            <br>
+            <h2 class="secondary-color underline">We build websites.</h2>
+            <p>
+                In this day and age, having a clean and beautiful website is absolutely essential to success at
+                any scale. Lorem ipsum dolor sit amet, nulla id id ac sodales magna. Dis bibendum metus viverra tortor,
+                ut ut venenatis platea nam sed curabitur, dis in, praesent vivamus vestibulum, ut bibendum
+                duis a fusce. Lorem mi cursus lorem imperdiet, ligula varius, eget nunc potenti diam pede,
+                luctus et quisque ornare sapien commodo odio, donec massa tincidunt. Laoreet ultrices facilisis
+                et curabitur imperdiet ipsum, et felis, amet sodales tempus, nec arcu faucibus duis.
+            </p>
+            <br>
+            <br>
+            <br>
+        </div>
+    </div>
+
+    <div class="parallax-container" ></div>
+
+    <div class="content-container">
+        <div class="content-block content-block-medium">
+            <h1>This is a test block.</h1>
+            <p>
+               Lorem ipsum dolor sit amet, nulla id id ac sodales magna. Dis bibendum metus viverra tortor,
+                ut ut venenatis platea nam sed curabitur, dis in, praesent vivamus vestibulum, ut bibendum
+                duis a fusce. Lorem mi cursus lorem imperdiet, ligula varius, eget nunc potenti diam pede,
+                luctus et quisque ornare sapien commodo odio, donec massa tincidunt. Laoreet ultrices facilisis
+                et curabitur imperdiet ipsum, et felis, amet sodales tempus, nec arcu faucibus duis.
+            </p>
+            <br>
+            <br>
+            <br>
+        </div>
     </div>
 
 {% endblock content %}
