--- a/website/templates/website/test.html
+++ b/website/templates/website/test.html
@@ -12,8 +12,9 @@
             </p>
         </div>
 </section>
+<img src="{% static 'website/background.jpg' %}"  data-stellar-ratio="0.7" style="width:100%; position:fixed; height:400px;">
 
-<section class="content-container">
+<section class="content-container" style="padding-top:200px; z-index:2;">
     <div class="content-block content-block-medium" >
             <h1>This is a test block.</h1>
             <p>
