--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -12,6 +12,7 @@
 		</script>
     </head>
     <body>
+
         <div class="page">
             <!--Header-->
             <div class="header">
@@ -31,7 +32,16 @@
             </div>
             <!--Footer-->
             <div class="footer">
-                <h1>This the Footer</h1>
+                <div class="divider">
+                </div>
+                <div class="footer-content">
+                    <ul class="contact-list">
+                        <li class="contact-item">Denver, CO</li>
+                        <li class="contact-item">email@aboslutedesign.com</li>
+                        <li class="contact-item">(303)-815-4595</li>
+                    </ul>
+                    <div class="center primary-font" style="font-size:80%;">Created by Absolute Design 2016</div>
+                </div>
             </div>
         </div>
     </body>
