--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -12,6 +12,7 @@ html, body{
 h1{
     font-size:500%;
     margin:0;
+    padding-bottom:30px;
 }
 
 .text-shadow{
@@ -24,10 +25,18 @@ h2{
     margin:0;
 }
 
+h3{
+    margin-bottom:0px;
+    font-size:180%;
+}
+
 p{
     font-family: Garamond, Baskerville, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
     font-size:170%;
     font-weight:500;
+}
+.primary-font{
+    font-family:"HelveticaNeue-Light";
 }
 
 .secondary-font{
@@ -79,6 +88,7 @@ p{
     margin-right:40px;
 
 }
+
 .nav{
     list-style:none;
     display:inline;
@@ -135,7 +145,7 @@ p{
     width: 100%;
     min-height:100%;
     position:relative;
-    padding-bottom:300px;
+    padding-bottom:200px;
 }
 
 .footer{
@@ -143,11 +153,30 @@ p{
     position: absolute;
     bottom:0;
     left:0;
-    height:300px;
-    background-color:grey;
+    height:200px;
+    font-size:120%;
+}
+
+.footer-content{
+    width:40%;
+    margin: 0 auto;
+    height: 60%;
+    margin-top:3%;
 
 }
 
+
+.contact-list{
+    list-style: none;
+}
+.contact-item{
+    padding: 5px 0px;
+
+}
+
+.content{
+    padding-bottom:50px;
+}
 
 .logo{
     height:113px;
@@ -174,6 +203,14 @@ p{
 
 .container-shadow{
     box-shadow: 0px 2.5px 5px grey;
+}
+
+.tele-image{
+    margin: auto;
+    height:400px;
+    width:400px;
+    padding: 40px 0px;
+
 }
 
 .jumbo-image{
@@ -243,12 +280,11 @@ p{
 
 .content-container{
     width:100%;
-
 }
 
 .content-container-background{
     background-size:cover;
-    height:1000px;
+    height:800px;
 }
 
 
@@ -266,14 +302,24 @@ p{
     padding-top:0;
 }
 
-.content-coloumn-third{
+.content-column-third{
     margin-top:40px;
     width:33.33%;
-    float:right;
+    float:left;
+
 }
 
-.coloumn-text{
-    padding:10px;
+.column-text{
+    padding:20px;
+    margin-top:10px;
+}
+
+.column-image{
+    display:block;
+    width:150px;
+    height:150px;
+    margin: 0 auto;
+    padding-bottom:40px;
 }
 
 .divider{
@@ -281,6 +327,10 @@ p{
     margin: 0 auto;
     height:1px;
     background-color:black;
+}
+
+.divider-full{
+    width:100%;
 }
 
 
