--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -5,15 +5,15 @@
 {% block content %}
 <div class="jumbo-container container-shadow">
 <div class="jumbo-image" style="background-image:url({% static 'website/background.jpg' %})"></div>
-<h1 class="jumbo-text">Design is Hard.</h1>
-<h2 class="jumbo-text jumbo-text-secondary">Let us do it for you.</h2>
+    <h1 class="jumbo-text jumbo-text-center">Design is Hard.</h1>
+    <h2 class="jumbo-text jumbo-text-secondary jumbo-text-center">Let us do it for you.</h2>
 </div>
 <!-- Ideas for stupid headers lol: Innovative Design, Powerful User Experience, Personal Client Collaboration -->
 
 <div class="content-container">
     <div class="content-block content-block-medium">
         <h1>Absolute Design</h1>
-        <br>
+
         <h2 class="secondary-color">We build websites.</h2>
         <div class>
             <p>
