--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -15,13 +15,12 @@
 
         <div class="page">
             <!--Header-->
-            <div class="header">
-                <img class="logo logo-float-left" src="{% static 'website/logo.png' %}">
+            <div class="header header-compressed header-fixed container-shadow">
                 <div class="nav-container">
                     <ul class="nav">
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="#">CONTACT US</a></li>
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="#">ABOUT</a></li>
-                        <li class="nav-item nav-item-border"><a class="nav-link" href="{% url 'website:home' %}">HOME</a></li>
+                        <li class="nav-item nav-item-compressed"><a class="nav-link" href="#">CONTACT US</a></li>
+                        <li class="nav-item nav-item-compressed"><a class="nav-link" href="#">ABOUT</a></li>
+                        <li class="nav-item nav-item-compressed"><a class="nav-link" href="{% url 'website:home' %}">HOME</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,11 +35,12 @@
                 </div>
                 <div class="footer-content">
                     <ul class="contact-list">
+                        <li class="contact-item">Absolute Design 2016</li>
                         <li class="contact-item">Denver, CO</li>
                         <li class="contact-item">email@aboslutedesign.com</li>
                         <li class="contact-item">(303)-815-4595</li>
                     </ul>
-                    <div class="center primary-font" style="font-size:80%;">Created by Absolute Design 2016</div>
+
                 </div>
             </div>
         </div>
