--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -28,9 +28,9 @@
     </div>
 </div>
 <div class="content-container content-container-background" data-stellar-background-ratio="0.8" style="background-image:url({% static 'website/mountains.jpg' %}); background-position-y:400px;">
-    <h1 class="center white" style="padding-top:200px;">Uncompromising Design.</h1>
-    <div class="content-block-medium">
-        <h2 class="white center">A successful website communicates ideas efficiently and effectively while keeping the audience engaged.</h2>
+    <h1 class="center white text-solid" style="position:relative; top:100px; width:80%; margin: 0 auto;">Uncompromising Design.</h1>
+    <div class="content-block-medium" style="margin-top:240px;">
+        <h2 class="white center text-solid">A successful website communicates ideas efficiently and effectively while keeping the audience engaged.</h2>
     </div>
 </div>
 <div class="content-container">
