--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -176,12 +176,12 @@ p{
     position: absolute;
     bottom:0;
     left:0;
-    height:100px;
+    height:180px;
     font-size:120%;
 }
 
 .footer-content{
-    width:80%;
+    width: 80%;
     margin: 0 auto;
     height: 100%;
 
@@ -191,22 +191,34 @@ p{
 
 
 .contact-list{
-    display:block;
+    display:inline-block;
     position:relative;
     margin:0 auto;
-    list-style: inline;
+    width:100%;
+    padding-left:120px;
+    list-style: none;
     top: 50%;
     transform: translateY(-50%);
 
 
 }
+
 .contact-item{
     padding: 5px 0px;
-    float:right;
     width:25%;
     font-size:90%;
-    text-align:center;
 
+
+}
+
+.icon-bullet{
+    background-size: cover;
+    height:20px;
+    width:20px;
+    padding:0;
+    margin:0;
+    margin-right:10px;
+    float:left;
 }
 
 .content{
@@ -278,7 +290,7 @@ p{
 
 }
 
-.jumbo-text-solid{
+.text-solid{
     padding:1.2% 1.6%;
     background-color:black;
 
