--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -2,7 +2,7 @@ html, body{
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family:"HelveticaNeue-Light";
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size:100%;
     line-height: 1.2;
     display:block;
