--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -27,12 +27,18 @@
         </div>
     </div>
 </div>
+
+
+
+
 <div class="content-container content-container-background" data-stellar-background-ratio="0.8" style="background-image:url({% static 'website/mountains.jpg' %}); background-position-y:400px;">
-    <h1 class="center white text-solid" style="position:relative; top:100px; width:80%; margin: 0 auto;">Uncompromising Design.</h1>
+    <h1 class="center white text-transparent" style="position:relative; top:100px; width:80%; margin: 0 auto;">Uncompromising Design.</h1>
     <div class="content-block-medium" style="margin-top:240px;">
-        <h2 class="white center text-solid">A successful website communicates ideas efficiently and effectively while keeping the audience engaged.</h2>
+        <h2 class="white center text-transparent">A successful website communicates ideas efficiently and effectively while keeping the audience engaged.</h2>
     </div>
 </div>
+
+
 <div class="content-container">
     <div class="content-block-medium">
         <h1>Why Use Us?</h1>
@@ -61,7 +67,7 @@
                 Client Focus
             </h3>
             <p class="column-text">
-                We take on very few projects at once so that you can be assured to get the most possible attention, maximizing client focus.
+                We take on only a couple projects at once so that you can be assured to get the most possible attention, maximizing client focus.
             </p>
         </div>
     </div>
