--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -33,7 +33,7 @@ h3{
 p{
     font-family: Garamond, Baskerville, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
     font-size:170%;
-    font-weight:500;
+    font-weight:600;
 }
 .primary-font{
     font-family:"HelveticaNeue-Light";
@@ -114,7 +114,7 @@ p{
     font-weight:500;
     margin-right:100px;
     height:40px;
-
+    transition: all 0.3s ease 0s;
 }
 
 .nav-item-compressed{
@@ -141,7 +141,6 @@ p{
     color:black;
     top: 50%;
     transform: translateY(-50%);
-
 }
 
 .nav-link:hover{
@@ -288,6 +287,7 @@ p{
     left:150px;
     top:410px;
     position:absolute;
+    font-weight: 600;
 
 }
 
@@ -385,6 +385,41 @@ p{
     width:100%;
 }
 
+/*about page*/
+
+.profile-row{
+    width:100%;
+    height:250px;
+}
+
+.profile-pic{
+    position:relative;
+    height:180px;
+    width:180px;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color:grey;
+    float:left;
+    margin: 0px 20px;
+}
+
+.profile-content{
+    position:relative;
+    padding: 0 40px;
+    float:left;
+    width:50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+.profile-pic-right{
+    float:right;
+}
+
+.profile-pic-left{
+
+}
 
 
 
