--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -25,7 +25,7 @@
                 <div class="nav-container">
                     <ul class="nav">
                         <li class="nav-item nav-item-compressed"><a class="nav-link" href="#">CONTACT US</a></li>
-                        <li class="nav-item nav-item-compressed"><a class="nav-link" href="#">ABOUT</a></li>
+                        <li class="nav-item nav-item-compressed"><a class="nav-link" href="{% url 'website:about' %}">ABOUT</a></li>
                         <li class="nav-item nav-item-compressed"><a class="nav-link" href="{% url 'website:home' %}">HOME</a></li>
                     </ul>
                 </div>
