Added header to about page

--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -5,6 +5,14 @@
 {% block title %}About{% endblock title %}
 {% block content %}
 <div class="content-container">
+    <div class="content-block-medium" style="background-image:url("{% static 'website/")>
+    <h1 class="headliner-text">
+        Innovative Form Concrete Ideas Powerful & Expressive <span class="secondary-color">About Us</span>
+        Passionate Team Provacative Presentation Absolute Design
+    </h1>
+    </div>
+</div>
+<div class="content-container">
     <div class="content-block-medium">
         <h1>Meet the Team.</h1>
         <div class="profile-row">
