--- a/website/static/website/style.css
+++ b/website/static/website/style.css
@@ -21,19 +21,24 @@ h1{
 }
 
 h2{
-    font-size:200%;
+    font-size:400%;
     margin:0;
 }
 
 h3{
-    margin-bottom:0px;
+    margin:0;
+    font-size:250%;
+}
+
+h4{
     font-size:180%;
+    margin-bottom:0px;
 }
 
 p{
     font-family: Garamond, Baskerville, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
     font-size:170%;
-    font-weight:600;
+    font-weight:500;
 }
 .primary-font{
     font-family:"HelveticaNeue-Light";
@@ -276,6 +281,8 @@ p{
     padding:1.2% 1.6%;
     top:300px;
     left:150px;
+    text-transform: uppercase;
+
 }
 
 .jumbo-parralax{
@@ -285,7 +292,7 @@ p{
 
 .jumbo-text-secondary{
     left:150px;
-    top:410px;
+    top:460px;
     position:absolute;
     font-weight: 600;
 
@@ -332,6 +339,8 @@ p{
 
 .content-container{
     width:100%;
+    background-size:cover;
+
 }
 
 .content-container-background{
@@ -345,9 +354,16 @@ p{
     padding-bottom:40px;
     width:70%;
     margin:0 auto;
-    overflow:auto;
     display:block;
 
+}
+
+.content-block-small{
+    padding-top:100px;
+    padding-bottom:40px;
+    width:50%;
+    margin:0 auto;
+    display:block;
 }
 
 .content-block-paddingless{
@@ -390,6 +406,11 @@ p{
 .profile-row{
     width:100%;
     height:250px;
+    padding: 20px 0px;
+}
+
+.profile-name{
+    margin-top:40px;
 }
 
 .profile-pic{
@@ -423,10 +444,37 @@ p{
 
 .headliner-text{
     display:block;
-    width:80%;
+    width:70%;
     font-size:400%;
     text-transform: uppercase;
 }
 
+.content-row{
+    width:100%;
+    margin: 30px 0;
+    height:240px;
+}
 
+.content-column-half{
+    float:left;
+    width:50%;
+}
 
+.content-column-image{
+    display:block;
+    position:relative;
+    height:100px;
+    width:100px;
+    background-color:grey;
+    float:left;
+    transform: translateY(-50%);
+    top:50%;
+    margin: 20px;
+}
+
+.content-column-text{
+    float:left;
+    position:relative;
+    transform: translateY(-50%);
+    top:50%;
+}
