--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -4,22 +4,55 @@
 
 {% block title %}About{% endblock title %}
 {% block content %}
-<div class="content-container" data-vide-bg="{% static 'website/skylapse.mp4' %}">
+<div class="content-container" style="background-image: url({% static 'website/wintermountain.jpeg' %})" data-stellar-background-ratio="0.8">
     <div class="content-block-medium">
 
     <h1 class="headliner-text">
         Innovative Form Concrete Ideas Powerful & Expressive <span class="secondary-color">About Us</span>
-        Passionate Team Provacative Presentation Absolute Design
+        Much Power Such Excitement <span class="secondary-color">Absolute Design</span>
     </h1>
+    </div>
+</div>
+
+<div class="content-container">
+    <div class="content-block-medium">
+        <h2>Our Approach.</h2>
+        <h4 style="color:grey;">Client Involved, Personalized Production.</h4>
+        <div class="content-row">
+            <div class="content-column-half">
+                <div class="content-column-image"></div>
+                <div class="content-column-text">
+                    <h4>Prototyping Stage</h4>
+                    <p>We work together with the client going over abstract design goals.  Creating models, and drafts of the product.</p>
+                </div>
+            </div>
+
+            <div class="content-column-half">
+                <h4>Development Stage</h4>
+                <p>After our team has a clear idea of what needs to be built, we get to work designing and constructing the project.</p>
+            </div>
+        </div>
+        <!--<div class="content-row">-->
+            <!--<div class="content-column-half">-->
+                <!--<h4>Finalizing Production</h4>-->
+                <!--<p>When the product is finished, we work with the client to put an final touches, and assure that it is up to the necessary standards before deployment.</p>-->
+            <!--</div>-->
+
+            <!--<div class="content-column-half">-->
+                <!--<h4>Ex-Post Review</h4>-->
+                <!--<p>Even after everything is completed, the team is available for as long as necessary to be sure that our product is funcitoning correctly and serving its purpose.</p>-->
+            <!--</div>-->
+        <!--</div>-->
+
     </div>
 </div>
 <div class="content-container">
     <div class="content-block-medium">
-        <h1>Meet the Team.</h1>
+        <h2>Meet the Team.</h2>
         <div class="profile-row">
             <div class="profile-pic"></div>
             <div class="profile-content">
-                <h2 class="profile-name">Conner Chyung, PhD. Everything</h2>
+                <h3 class="profile-name">Conner Chyung, PhD. Everything</h3>
                 <p>Hello this is a test paragrpah that is supposed to say some meaningful stuff about people that work at our company.
                 But instead it just says this sentence.
                 </p>
@@ -31,7 +64,7 @@
          <div class="profile-row">
             <div class="profile-pic profile-pic-right"></div>
             <div class="profile-content">
-                <h2 class="profile-name">Drew Parsons, PhD. Everything</h2>
+                <h3 class="profile-name">Drew Parsons, PhD. Everything</h3>
                 <p>Hello this is another test paragraph to test some other stuff lol.  Here are more words
                     to fill space up and make it look like it would when we finally figure out what we want
                     to say here.
