Work on the about page

--- a/website/templates/website/about.html
+++ b/website/templates/website/about.html
@@ -32,17 +32,17 @@
                 <p>After our team has a clear idea of what needs to be built, we get to work designing and constructing the project.</p>
             </div>
         </div>
-        <!--<div class="content-row">-->
-            <!--<div class="content-column-half">-->
-                <!--<h4>Finalizing Production</h4>-->
-                <!--<p>When the product is finished, we work with the client to put an final touches, and assure that it is up to the necessary standards before deployment.</p>-->
-            <!--</div>-->
+        <!-- <div class="content-row">
+            <div class="content-column-half">
+                <h4>Finalizing Production</h4>
+                <p>When the product is finished, we work with the client to put an final touches, and assure that it is up to the necessary standards before deployment.</p>
+            </div>
 
-            <!--<div class="content-column-half">-->
-                <!--<h4>Ex-Post Review</h4>-->
-                <!--<p>Even after everything is completed, the team is available for as long as necessary to be sure that our product is funcitoning correctly and serving its purpose.</p>-->
-            <!--</div>-->
-        <!--</div>-->
+            <div class="content-column-half">
+                <h4>Ex-Post Review</h4>
+                <p>Even after everything is completed, the team is available for as long as necessary to be sure that our product is funcitoning correctly and serving its purpose.</p>
+            </div>
+        </div> -->
 
     </div>
 </div>
