--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -31,12 +31,10 @@
 
 
 
-<div class="content-container content-container-background" data-stellar-background-ratio="0.8" style="background-image:url({% static 'website/mountains.jpg' %}); background-position-y:400px;">
-    <h1 class="center white text-transparent" style="position:relative; top:100px; width:80%; margin: 0 auto;">Uncompromising Design.</h1>
-    <div class="content-block-medium" style="margin-top:240px;">
-        <h3 class="white center text-transparent">A successful website communicates ideas efficiently and effectively while keeping the audience engaged.</h3>
-    </div>
-</div>
+<!-- <div class="content-container content-container-background" data-stellar-background-ratio="0.8" style="background-image:url({% static 'website/mountains.jpg' %});">
+
+</div> -->
+<div class="divider"></div>
 
 
 <div class="content-container">
