--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -4,7 +4,7 @@
 {% block title %}Absolute Design{% endblock title %}
 {% block content %}
 <div class="jumbo-container container-shadow">
-<div class="jumbo-image" data-vide-bg="{% static 'website/skylapse.mp4' %}"></div>
+<div class="jumbo-image" data-vide-bg="{% static 'website/video/skylapse.mp4' %}"></div>
     <h1 class="jumbo-text text-transparent">Design is Hard,</h1>
     <h3 class="jumbo-text jumbo-text-secondary text-transparent">Let us do it for you.</h3>
 </div>
